[package]
name = "rustcms-axum-xml"
version = "0.3.0"
edition = "2021"
authors = ["rustcms <rustcms.com>"]
description = "XML extractor for axum"
readme = "README.md"
license = "MIT"
keywords = ["axum", "xml", "parser", "parsing", "extractor","rustcms"]
categories = ["parsing", "text-processing", "encoding", "web-programming", "web-programming::http-server"]

[features]
encoding = ["quick-xml/encoding"]

[dependencies]
async-trait = "0.1"
axum-core = "0.3"
bytes = "1.4"
http = "0.2"
http-body = "0.4"
mime = "0.3"
quick-xml = { version = "0.26", features = ["serialize"] }
serde = "1.0"
thiserror = "1.0"

[dev-dependencies]
axum = "0.6"
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.26", features = ["rt", "macros"] }
tower = "0.4"
tower-service = "0.3"
uuid = { version = "1.3", features = ["serde"] }